srm-client: Get rid of GlobusURL
Motivation:

Get rid of JGlobus dependencies.

Modification:

Replaces uses of GlobusURL with URI. SrmUrl is turned into a
URI factory that injects default ports like GlobusURL did.

Result:

Hopefully no user visible changes.

Target: trunk
Require-notes: yes
Require-book: no
Acked-by: Dmitry Litvintsev <litvinse@fnal.gov>
Acked-by: Paul Millar <paul.millar@desy.de>
Patch: https://rb.dcache.org/r/8605/